finalized the outputs

--- a/data/solution.ipynb
+++ b/data/solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 65,
    "id": "b626d968",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "22025"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 66,
    "id": "1646131c",
    "metadata": {},
    "outputs": [
@@ -51,12 +51,14 @@
        "19999"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#since geoinfo isn't actually a column name, I'm pretty sure it's the lat and long for each request\n",
+    "\n",
     "# Question 1\n",
     "df1 = df.dropDuplicates([' TimeSt','Latitude','Longitude'])\n",
     "df1.count()"
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 67,
    "id": "7f84ff72",
    "metadata": {},
    "outputs": [],
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 68,
    "id": "bf9934a5",
    "metadata": {},
    "outputs": [],
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 69,
    "id": "19092e33",
    "metadata": {},
    "outputs": [],
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 70,
    "id": "b84577a6",
    "metadata": {},
    "outputs": [
@@ -127,11 +129,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------+-------+--------+----+--------+---------+-----+------+-------+---+-------------+\n",
-      "| TimeSt|Country|Province|City|Latitude|Longitude|POIID|poiLat|poiLong|_ID|min(distance)|\n",
-      "+-------+-------+--------+----+--------+---------+-----+------+-------+---+-------------+\n",
-      "+-------+-------+--------+----+--------+---------+-----+------+-------+---+-------------+\n",
-      "only showing top 0 rows\n",
+      "+--------------------+-------+--------+-------------+--------+----------+-----+---------+-----------+-------+------------------+\n",
+      "|              TimeSt|Country|Province|         City|Latitude| Longitude|POIID|   poiLat|    poiLong|    _ID|     min(distance)|\n",
+      "+--------------------+-------+--------+-------------+--------+----------+-----+---------+-----------+-------+------------------+\n",
+      "|2017-06-21 00:22:...|     CA|      ON|    Etobicoke| 43.6381|  -79.5787| POI3|45.521629| -73.566024|5613403| 670.2586351276966|\n",
+      "|2017-06-21 00:34:...|     CA|      ON|      Toronto| 43.6606|  -79.4635| POI3|45.521629| -73.566024|5013924| 657.4592243551863|\n",
+      "|2017-06-21 00:42:...|     CA|      AB|      Calgary| 51.1188| -113.9471| POI1|53.546167|-113.485734|5122425| 120.0615960353242|\n",
+      "|2017-06-21 01:01:...|     CA|      AB|      Calgary| 51.0876| -114.0214| POI1|53.546167|-113.485734|4571908|125.18334295783798|\n",
+      "|2017-06-21 01:08:...|     CA|      ON|      Toronto|43.66341| -79.38597| POI3|45.521629| -73.566024|5447065| 648.8678959130891|\n",
+      "|2017-06-21 01:22:...|     CA|      AB|     Edmonton| 53.4154| -113.4178| POI1|53.546167|-113.485734|4843104| 9.515724782576191|\n",
+      "|2017-06-21 01:36:...|     CA|      AB|      Calgary| 51.0823| -113.9578| POI1|53.546167|-113.485734|5030419|122.06704722894797|\n",
+      "|2017-06-21 01:57:...|     CA|      QC|   Sainte-Foy| 46.7823|  -71.2882| POI3|45.521629| -73.566024|5337456| 256.7798515408869|\n",
+      "|2017-06-21 02:04:...|     CA|      AB|  Fort Mackay|57.32867|-111.75584| POI1|53.546167|-113.485734|5413296|251.25064195561393|\n",
+      "|2017-06-21 02:11:...|     CA|      AB|      Calgary|  50.915|   -114.06| POI1|53.546167|-113.485734|4693076|134.10171094598653|\n",
+      "|2017-06-21 02:22:...|     CA|      SK|     Radville|49.37063|-104.29448| POI1|53.546167|-113.485734|4845794| 1032.386097363544|\n",
+      "|2017-06-21 02:57:...|     CA|      AB|      Calgary| 51.0486|  -113.968| POI1|53.546167|-113.485734|5329292|123.93621640565625|\n",
+      "|2017-06-21 03:02:...|     CA|      AB|      Calgary| 50.9819| -114.1004| POI1|53.546167|-113.485734|4581888|133.79089197617293|\n",
+      "|2017-06-21 03:06:...|     CA|      AB|      Calgary|51.05187|-113.94978| POI1|53.546167|-113.485734|5431366|122.90410281238276|\n",
+      "|2017-06-21 03:13:...|     CA|      AB|      Calgary|50.90133|-114.08712| POI1|53.546167|-113.485734|5500911|136.15157668956863|\n",
+      "|2017-06-21 03:37:...|     CA|      ON|      Toronto| 43.6796|  -79.4343| POI3|45.521629| -73.566024|5060850| 654.1907911397406|\n",
+      "|2017-06-21 03:44:...|     CA|      ON|Richmond Hill| 43.8669|  -79.4414| POI3|45.521629| -73.566024|5154104| 654.6561010905008|\n",
+      "|2017-06-21 03:48:...|     CA|      ON|    Newmarket| 44.0587|  -79.4591| POI3|45.521629| -73.566024|5203240| 656.3260958345329|\n",
+      "|2017-06-21 04:05:...|     CA|      AB|     Edmonton| 53.4311|  -113.519| POI1|53.546167|-113.485734|4623647| 6.302174896333771|\n",
+      "|2017-06-21 04:07:...|     CA|      SK|    Saskatoon| 52.1218|  -106.645| POI1|53.546167|-113.485734|5444477| 762.5392453460546|\n",
+      "+--------------------+-------+--------+-------------+--------+----------+-----+---------+-----------+-------+------------------+\n",
+      "only showing top 20 rows\n",
       "\n"
      ]
     }
@@ -158,13 +180,13 @@
     "tmpDf1 = df1.groupBy('_ID').min('distance')\n",
     "df1=df1.join(tmpDf1,(df1['_ID'] == tmpDf1['_ID']) & (df1['distance'] == tmpDf1['min(distance)'])).drop(tmpDf1._ID)\n",
     "df1=df1.drop('distance')\n",
-    "df1.show(0)\n",
+    "df1.show()\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 71,
    "id": "f4f55639",
    "metadata": {},
    "outputs": [],
@@ -180,8 +202,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 72,
    "id": "4603d375",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+-----------------+------------------+\n",
+      "|POIID| Average distance|Standard Deviation|\n",
+      "+-----+-----------------+------------------+\n",
+      "| POI4|664.0431071829552| 2072.764962751564|\n",
+      "| POI1|296.9202099001768| 571.2873049876008|\n",
+      "| POI3|590.8752886807175|309.04612101412664|\n",
+      "+-----+-----------------+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 3 a\n",
+    "df3 = df1.groupBy('POIID').agg(avg('min(distance)').alias('Average distance'), stddev('min(distance)').alias('Standard Deviation'))\n",
+    "\n",
+    "df3.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "43eca0e4",
    "metadata": {},
    "outputs": [
     {
@@ -200,10 +250,8 @@
     }
    ],
    "source": [
-    "# Question 3 a\n",
-    "df3 = df1.groupBy('POIID').agg(avg('min(distance)').alias('Average distance'), stddev('min(distance)').alias('Standard Deviation'))\n",
-    "\n",
-    "#3 b was not the best for the wording, and I spend many hours on attempting to draw a circle to visualize the data.  \n",
+    "#3 b was not the best for the wording, and I spent many hours on attempting to draw a circle to visualize the data, \n",
+    "# that I didn't need to do.  \n",
     "\n",
     "# Question 3 b\n",
     "df3b = df1.groupBy('POIID').agg(max('min(distance)').alias('Radius'), count('min(distance)').alias('Count'))\n",
@@ -213,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 74,
    "id": "8ba218a8",
    "metadata": {},
    "outputs": [
